# nn-on-fpgas

./: .gitmodules  CMakeLists.txt  INSTALL.md  Makefile  README.md  common.cfg  pyproject.toml  train.py
fcnn-mnist/: .gitignore  CMakeLists.txt  Makefile  train.py
fcnn-mnist/src/: bias_softmax_kernel.cpp  main.cpp  matmul_kernel.cpp  matmul_kernel.hpp  matrix.hpp  net.hpp  utils.hpp
src/: bias_relu6_kernel.cpp  libnpy.hpp  main.cpp  matmul_kernel.cpp  matrix.hpp  net.hpp  tests.cpp  utils.hpp
utils/: data.py
weights/: b1.npy  b2.npy  samples.npy  w1.npy  w2.npy
